--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Build docker image
+        run: |
+          docker build -t car-management .
       - name: Run tests
         run: |
           pytest -q
