fixed the issues

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
 fastapi
-uvicorn[standard]
-python-dotenv
-pydantic
-requests
-pandas
-plotly
-beautifulsoup4
+uvicorn
 streamlit
-pytest
-httpx
+sqlalchemy
+requests
+python-dotenv
